infra/deployments/artifacts/production/identity/basic-app/templates/deployment.yaml
---
# Source: basic-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: app
          image: "dansysadm.com/images/identity:latest"
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            null
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
