infra/deployments/artifacts/production/identity/basic-app/templates/service.yaml
---
# Source: basic-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  labels:
    app: identity
    deploy-timestamp: "1773208556"
spec:
  type: ClusterIP
  selector:
    app: identity
  ports:
    - port: 8080
      targetPort: 
      protocol: TCP
