infra/deployments/artifacts/production/identity/basic-app/templates/ingress.yaml
---
# Source: basic-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity
spec:
  ingressClassName: traefik
  rules:
    - host: identity.dansysadm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 8080
